--- a/ios/Podfile
+++ b/ios/Podfile
@@ -38,7 +38,7 @@ elsif podfile_properties.key?('ios.flipper') then
   end
 end
 
-target 'FitLabClient' do
+target 'trainninglogclient' do
   use_expo_modules!
   config = use_native_modules!
 
