--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "fitlabclient",
+  "name": "trainning-log-client",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
@@ -9,11 +9,28 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~48.0.15",
-    "expo-splash-screen": "~0.18.2",
+    "@expo/vector-icons": "^13.0.0",
+    "@react-native-community/masked-view": "^0.1.11",
+    "@react-navigation/bottom-tabs": "^6.5.7",
+    "@react-navigation/native": "^6.1.6",
+    "@react-navigation/stack": "^6.3.16",
+    "@rneui/themed": "^4.0.0-rc.7",
+    "axios": "^1.3.6",
+    "expo": "~48.0.11",
+    "expo-splash-screen": "~0.18.1",
     "expo-status-bar": "~1.4.4",
+    "nvm": "^0.0.4",
+    "nvm-win": "^0.2.4",
     "react": "18.2.0",
-    "react-native": "0.71.7"
+    "react-native": "^0.71.6",
+    "react-native-draggable": "^3.3.0",
+    "react-native-gesture-handler": "^2.9.0",
+    "react-native-paper": "^5.7.0",
+    "react-native-reanimated": "^2.14.4",
+    "react-native-safe-area-context": "^4.5.1",
+    "react-native-screens": "^3.20.0",
+    "react-native-table-component": "^1.2.2",
+    "react-native-vector-icons": "^9.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
