--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@rneui/base": "^4.0.0-rc.7",
     "@rneui/themed": "^4.0.0-rc.7",
     "axios": "^1.3.6",
+    "expo-cli": "^6.3.7",
     "expo-splash-screen": "~0.18.2",
     "expo-status-bar": "~1.4.4",
     "import": "^0.0.6",
@@ -29,9 +30,8 @@
     "nvm": "^0.0.4",
     "nvm-win": "^0.2.4",
     "react": "18.2.0",
-    "react-native": "0.71.8",
+    "react-native": "^0.71.8",
     "react-native-calendar-picker": "^7.1.4",
-    "react-native-calendars": "^1.1297.0",
     "react-native-draggable": "^3.3.0",
     "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "~2.9.0",
@@ -44,11 +44,11 @@
     "react-native-tab-view": "^3.5.1",
     "react-native-table-component": "^1.2.2",
     "react-native-vector-icons": "^9.2.0",
-    "react-navigation": "^4.4.4"
+    "react-navigation": "^4.4.4",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0",
-    "expo-cli": "^4.13.0"
+    "@babel/core": "^7.20.0"
   },
   "private": true
 }
