--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
     "@exponent/vector-icons": "^4.0.0",
+    "@react-native-async-storage/async-storage": "^1.18.2",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/material-top-tabs": "^6.6.2",
@@ -38,11 +39,11 @@
     "react-native-get-random-values": "~1.8.0",
     "react-native-paper": "^5.7.2",
     "react-native-reanimated": "~2.14.4",
+    "react-native-reanimated-table": "^0.0.2",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
     "react-native-svg": "13.4.0",
     "react-native-tab-view": "^3.5.1",
-    "react-native-table-component": "^1.2.2",
     "react-native-vector-icons": "^9.2.0",
     "react-navigation": "^4.4.4",
     "uuid": "^9.0.0"
